// Original file: src/protos/zetasql/resolved_ast/resolved_ast_enums.proto


// Original file: src/protos/zetasql/resolved_ast/resolved_ast_enums.proto

export enum _zetasql_ResolvedForeignKeyEnums_ActionOperation {
  NO_ACTION = 0,
  RESTRICT = 1,
  CASCADE = 2,
  SET_NULL = 3,
}

// Original file: src/protos/zetasql/resolved_ast/resolved_ast_enums.proto

export enum _zetasql_ResolvedForeignKeyEnums_MatchMode {
  SIMPLE = 0,
  FULL = 1,
  NOT_DISTINCT = 2,
}

export interface ResolvedForeignKeyEnums {
}

export interface ResolvedForeignKeyEnums__Output {
}
